--- a/apod/Base.lproj/Main.storyboard
+++ b/apod/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                                 <rect key="frame" x="0.0" y="269" width="375" height="128"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ti9-a1-jZk">
-                                        <rect key="frame" x="0.0" y="-238" width="375" height="486"/>
+                                        <rect key="frame" x="0.0" y="-238" width="375" height="524"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uon-Hm-dDM" userLabel="ImageView">
                                                 <rect key="frame" x="0.0" y="0.0" width="375" height="429"/>
@@ -39,6 +39,16 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
+                                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yp0-Ub-EWF" userLabel="SelectDateButton">
+                                                <rect key="frame" x="0.0" y="494" width="375" height="30"/>
+                                                <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <state key="normal" title="Select Date">
+                                                    <color key="titleColor" red="0.99942404029999998" green="0.98555368190000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </state>
+                                                <connections>
+                                                    <segue destination="WjM-pk-BTm" kind="show" id="GT1-W1-qKM"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                     </stackView>
                                 </subviews>
@@ -46,6 +56,7 @@
                                     <constraint firstAttribute="trailing" secondItem="ti9-a1-jZk" secondAttribute="trailing" id="KlG-b5-mGD"/>
                                     <constraint firstItem="ti9-a1-jZk" firstAttribute="top" secondItem="r2Q-CJ-Gwz" secondAttribute="top" id="QfQ-yp-Pfx"/>
                                     <constraint firstAttribute="bottom" secondItem="ti9-a1-jZk" secondAttribute="bottom" id="XBd-zS-3nE"/>
+                                    <constraint firstItem="ti9-a1-jZk" firstAttribute="width" secondItem="r2Q-CJ-Gwz" secondAttribute="width" id="Ye0-Fj-Y0F"/>
                                     <constraint firstItem="ti9-a1-jZk" firstAttribute="leading" secondItem="r2Q-CJ-Gwz" secondAttribute="leading" id="rng-ax-kAH"/>
                                 </constraints>
                             </scrollView>
@@ -69,6 +80,37 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="456.80000000000001" y="87.706146926536732"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="ijD-Xu-rha">
+            <objects>
+                <viewController id="WjM-pk-BTm" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9Nq-hP-WO1">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <datePicker contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="a2L-NU-WgM">
+                                <rect key="frame" x="0.0" y="239" width="375" height="162"/>
+                                <date key="date" timeIntervalSinceReferenceDate="545256171.71753001">
+                                    <!--2018-04-12 20:02:51 +0000-->
+                                </date>
+                                <connections>
+                                    <action selector="datePickerChanged:" destination="GUm-sH-1Dr" eventType="valueChanged" id="1xn-Yf-XA2"/>
+                                </connections>
+                            </datePicker>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="a2L-NU-WgM" firstAttribute="trailing" secondItem="of0-Nt-GVp" secondAttribute="trailing" id="GAm-gR-ce8"/>
+                            <constraint firstItem="a2L-NU-WgM" firstAttribute="leading" secondItem="of0-Nt-GVp" secondAttribute="leading" id="SBa-6T-hW7"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="of0-Nt-GVp"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PPr-mu-7cl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="GUm-sH-1Dr" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="1404" y="94"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="fFn-KN-ich">
